# United-Karts

./: package-lock.json
UnitedKarts/: .env  App.tsx  SETUP_GUIDE.md  app.config.js  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
UnitedKarts/android/: build.gradle  gradle.properties  settings.gradle
UnitedKarts/app/: _layout.tsx  checkout.tsx  delivery-dashboard.tsx  index.tsx  onboarding.tsx  restaurant-dashboard.tsx  role-selection.tsx
UnitedKarts/components/: AdvancedFilters.tsx  FoodItemCard.tsx  LocationPicker.tsx  PromotionalBanner.tsx  QuickReorder.tsx  RestaurantCard.tsx  VoiceSearch.tsx
backend/: README.md  main.py
backend/delivery_partner/: pyproject.toml  uv.yaml
backend/delivery_partner/app/: main.py
backend/restaurant/: API_ENDPOINTS.md  README.md  env.example  pyproject.toml  uv.yaml
backend/restaurant/app/: main.py
backend/restaurant/app/api/: __init__.py  analytics.py  menu.py  orders.py  payment.py  profile.py  restaurant.py  upload.py
backend/restaurant/app/core/: config.py  security.py
backend/restaurant/app/db/: base.py  models.py  session.py
backend/restaurant/app/schemas/: restaurant.py
backend/restaurant/app/services/: analytics_service.py  coupon_service.py  menu_service.py  notification_service.py  order_service.py  profile_service.py  razorpay_service.py  review_service.py  s3_service.py
backend/restaurant/batch/: batch_jobs.py
backend/user/: pyproject.toml  uv.yaml
backend/user/app/: main.py
docs/: arch.md
scripts/: database_setup_script.sql  dummy_data_insert.sql
(+78 files in other folders)
