[tool.poetry]
name = "restaurant-service"
version = "0.1.0"
description = "Restaurant microservice for United Karts"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
pydantic = "^2.6.4"
apscheduler = "^3.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 